# preflight-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  NOTICE  README.md  docker-compose.yml
src/: auth.rs  callback.rs  config.rs  gs.rs  lib.rs  main.rs  models.rs  pdf.rs
src/pipeline/: mod.rs
src/pipeline/checks/: blank_pages.rs  colour.rs  encrypted.rs  image_resolution.rs  margins.rs  mod.rs  page_count.rs  page_dimensions.rs  pdf_valid.rs  readable.rs
src/routes/: analyse.rs  mod.rs  multipart.rs  prepare.rs  process.rs
tests/: auth_tests.rs  config_tests.rs  endpoint_tests.rs  gs_tests.rs  pdf_logic_tests.rs  pipeline_tests.rs
